# easycrypto

./: .gitignore  CMakeLists.txt  Caesar.cpp  main.cpp
include/: Caesar.h  SimpleSubstitution.h
test/: CMakeLists.txt  CaesarTest.cpp  SimpleSubstitutionTest.cpp
